started working on the datamap page

--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ name = "pypi"
 
 [packages]
 
-django = "*"
+Django = "*"
 "psycopg2" = "*"
 
 
@@ -22,7 +22,6 @@ yapf = "*"
 django-extensions = "*"
 pgcli = "*"
 python-language-server = {extras = ["all"]}
-pyls-mypy = "*"
 pyls-isort = "*"
 pytest = "*"
 pytest-django = "*"
