--- a/provision/setup/vars/main.yml
+++ b/provision/setup/vars/main.yml
@@ -33,3 +33,4 @@ virtualenv_root: /vagrant/virtualenvs
 requirements_files:
   - "{{ project_path }}/requirements.txt"
   - "{{ project_path }}/requirements_dev.txt"
+required_python_version: 3.6.5
