--- a/Pipfile
+++ b/Pipfile
@@ -1,13 +1,18 @@
 [[source]]
+
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
+
 [packages]
+
 django = "*"
 "psycopg2" = "*"
 
+
 [dev-packages]
+
 neovim = "*"
 ptpython = "*"
 pdbpp = "*"
@@ -26,3 +31,4 @@ black = "*"
 selenium = "*"
 pytest-selenium = "*"
 mypy = "*"
+pyflakes = "*"
