--- a/Pipfile
+++ b/Pipfile
@@ -1,20 +1,15 @@
 [[source]]
-
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
-
 [packages]
-
 django = "*"
 "psycopg2" = "*"
 django-extensions = "*"
 django-crispy-forms = "*"
 
-
 [dev-packages]
-
 neovim = "*"
 ptpython = "*"
 pdbpp = "*"
@@ -36,3 +31,4 @@ mypy = "*"
 pyflakes = "*"
 pytest-cov = "*"
 werkzeug = "*"
+pylint = "*"
