--- a/provision/setup/vars/main.yml
+++ b/provision/setup/vars/main.yml
@@ -8,6 +8,7 @@ system_packages:
   - build-essential
   - git
   - python3-dev
+  - python-dev
   - python-setuptools
   - python3-pip
   - python3-virtualenv
