tweaked the provisioning files now for more reliable performance

--- a/provision/setup/tasks/main.yml
+++ b/provision/setup/tasks/main.yml
@@ -70,13 +70,6 @@
     chdir: "{{ downloads_dir }}/Python-{{ required_python_version }}"
   when: not pybin.stat.exists
 
-- name: Copy libpython3.6m.so.1.0 to /usr/lib/x86_64-linux-gnu
-  become: yes
-  copy:
-    remote_src: yes
-    src: "{{ installed_python_path }}/lib/libpython3.6m.so.1.0"
-    dest: /usr/lib/x86_64-linux-gnu/  
-
 - name: Install base Python packages (for system use)
   become: yes
   easy_install: name={{ item }}
@@ -91,7 +84,16 @@
       state: directory
       path: "{{ virtualenv_root }}"
 
-- name: Set up dbasik virtualenv using installed python (will skip if not present)
+- name: Create a logs directory
+  become: yes
+  file:
+    group: vagrant
+    owner: vagrant
+    mode: 0755
+    state: directory
+    path: "{{ logs_root }}"
+
+- name: Set up dbasik virtualenv using installed python
   pip:
       requirements: "{{ item }}"
       virtualenv: "{{ virtualenv_root }}/{{ project_name }}"
@@ -99,13 +101,13 @@
   loop: "{{ requirements_files }}"
   when: pybin.stat.exists
 
-- name: Set up dbasik virtualenv with system python
-  pip:
-      requirements: "{{ item }}"
-      virtualenv: "{{ virtualenv_root }}/{{ project_name }}"
-      virtualenv_python: python3
-  loop: "{{ requirements_files }}"
-  when: not pybin.stat.exists
+  #- name: Set up dbasik virtualenv with system python
+  #  pip:
+  #      requirements: "{{ item }}"
+  #      virtualenv: "{{ virtualenv_root }}/{{ project_name }}"
+  #      virtualenv_python: python3
+  #  loop: "{{ requirements_files }}"
+  #  when: not pybin.stat.exists
 
 - name: ensure database user is created
   become: yes
