--- a/Pipfile
+++ b/Pipfile
@@ -1,21 +1,16 @@
 [[source]]
-
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
-
 [packages]
-
-django = "*"
+django = "==2.1.1"
 "psycopg2" = "*"
 django-extensions = "*"
 django-crispy-forms = "*"
 openpyxl = "*"
 
-
 [dev-packages]
-
 neovim = "*"
 pdbpp = "*"
 "flake8" = "*"
