--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ django = "==2.1.1"
 django-extensions = "*"
 django-crispy-forms = "*"
 openpyxl = "*"
+factory-boy = "==2.11.1"
+pytest-django = "==3.4.2"
 
 [dev-packages]
 neovim = "*"
