contains failing test and lots of renaming

--- a/Pipfile
+++ b/Pipfile
@@ -6,11 +6,18 @@ name = "pypi"
 [packages]
 django = "==2.1.1"
 "psycopg2" = "*"
-django-extensions = "*"
+django-extensions = "==2.1.2"
 django-crispy-forms = "*"
 openpyxl = "*"
 factory-boy = "==2.11.1"
 pytest-django = "==3.4.2"
+astroid = "==2.0.4"
+atomicwrites = "==1.2.1"
+"flake8-bugbear" = "==18.8.0"
+mypy = "==0.620"
+typing = "==3.6.6"
+selenium = "==3.14.0"
+jedi = "==0.12.1"
 
 [dev-packages]
 neovim = "*"
@@ -25,7 +32,6 @@ pyls-isort = "*"
 pytest = "*"
 pytest-django = "*"
 "flake8-bugbear" = "*"
-black = "*"
 "flake8-mypy" = "*"
 selenium = "*"
 pytest-selenium = "*"
