passing tests on FinancialYear objects

--- a/Pipfile
+++ b/Pipfile
@@ -8,17 +8,18 @@ django = "==2.1.1"
 "psycopg2" = "*"
 django-extensions = "==2.1.2"
 django-crispy-forms = "*"
-openpyxl = "*"
+openpyxl = "==2.5.7"
 factory-boy = "==2.11.1"
 pytest-django = "==3.4.2"
 astroid = "==2.0.4"
 atomicwrites = "==1.2.1"
 "flake8-bugbear" = "==18.8.0"
-mypy = "==0.620"
+mypy = "==0.630"
 typing = "==3.6.6"
 selenium = "==3.14.0"
 jedi = "==0.12.1"
 behave-django = "*"
+faker = "==0.9.1"
 
 [dev-packages]
 neovim = "*"
