Docker can now be used for development
Followed this tutorial: https://londonappdeveloper.com/deploying-django-with-docker-compose/

This commit takes us up to the point before making changes for
deployment which will appear in the committ following this one.

To run django development server here:

`docker-compose -f docker-compose.yml up`.

To add superuser, Ctrl-C then:

`docker-compose -f docker-compose.yml run app sh -c "python manage.py createsuperuser"`

To examine the Django service only, you can run just the app service
without the db service, with:

`docker-compose -f docker-compose.yml run --rm --no-deps app sh`

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ Test Results - CSV_Form_Validator_Tests.html
 /venve/
 excelparser/tests/does_not_open_workbook.xlsm
 returns/tests/expected_test_output.xlsm
+*__pycache__
