--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-django>=2.2.24
-Celery>=5.2.2
+Django>=4.0.2,<4.1
+Celery
 django-crispy-forms
 django-extensions
 factory_boy
-selenium
-openpyxl
-Pillow
+psycopg2>=2.8.6,<2.9
+# selenium
+openpyxl==2.6.4
+# Pillow
+# setproctitle
