--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ secrets.json
 .pytest_cache/
 .vagrant/
 static/
+/data
 assets/
 driver/
 report.html
@@ -22,4 +23,5 @@ Test Results - CSV_Form_Validator_Tests.html
 /venve/
 excelparser/tests/does_not_open_workbook.xlsm
 returns/tests/expected_test_output.xlsm
+/.env
 *__pycache__
