--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ factory_boy
 pdbpp>=0.10.3,<0.11.0
 # selenium
 openpyxl==2.6.4
+django-ninja==0.19.1
 # Pillow
 # setproctitle
 uWSGI>=2.0.19.1,<2.1
