--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Django>=4.0.2,<4.1
+Django>=5.0.0,<5.1
 celery[redis]==5.2.2,<5.3
 django-crispy-forms
 django-extensions
 factory_boy
-#psycopg2>=2.8.6,<2.9
+psycopg[binary]>=3.1.18,<3.2
 pdbpp>=0.10.3,<0.11.0
 # selenium
 openpyxl==2.6.4
@@ -11,4 +11,4 @@ django-ninja==0.19.1
 # Pillow
 # setproctitle
 uWSGI>=2.0.19.1,<2.1
-djangorestframework>=3.13.1,<3.14
+djangorestframework>=3.14.0,<3.15
