--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django>=5.0.0,<5.1
 celery[redis]==5.2.2,<5.3
 django-crispy-forms
+crispy-bootstrap4
 django-extensions
 factory_boy
 psycopg[binary]>=3.1.18,<3.2
