--- a/compose.yaml
+++ b/compose.yaml
@@ -8,6 +8,10 @@ x-app: &default-app
   restart: "unless-stopped"
 
 services:
+  redis:
+    image: redis:latest
+    ports: 
+      - "6379:6379"
   db:
     image: postgres:16-alpine
     ports:
